--- a/cardano-api/cardano-api.cabal
+++ b/cardano-api/cardano-api.cabal
@@ -20,6 +20,9 @@ library
                         Cardano.Api.Shelley
 
                         Cardano.Api.Crypto.Ed25519Bip32
+
+                        Cardano.Api.IPC
+
                         -- TODO: Eliminate in the future when
                         -- we create wrapper types for the ledger types
                         -- in this modulde
@@ -33,25 +36,25 @@ library
 
                         -- TODO Review this.  Made public to compile cardano-rest
                         Cardano.Api.TxBody
-
-  other-modules:        Cardano.Api.TxSubmit.ErrorRender
+                        Cardano.Api.Modes
                         Cardano.Api.TxSubmit.Types
+                        Cardano.Api.TxInMode
+                        Cardano.Api.Eras
+                        Cardano.Api.TxSubmit.ErrorRender
 
+  other-modules:        
                         -- Splitting up the big Typed module:
                         Cardano.Api.Address
                         Cardano.Api.Block
                         Cardano.Api.Certificate
-                        Cardano.Api.Eras
                         Cardano.Api.Error
                         Cardano.Api.Fees
                         Cardano.Api.Hash
                         Cardano.Api.HasTypeProxy
-                        Cardano.Api.IPC
                         Cardano.Api.Key
                         Cardano.Api.KeysByron
                         Cardano.Api.KeysShelley
                         Cardano.Api.KeysPraos
-                        Cardano.Api.Modes
                         Cardano.Api.NetworkId
                         Cardano.Api.OperationalCertificate
                         Cardano.Api.ProtocolParameters
@@ -66,7 +69,6 @@ library
                         Cardano.Api.SpecialByron
                         Cardano.Api.StakePoolMetadata
                         Cardano.Api.Tx
-                        Cardano.Api.TxInMode
                         Cardano.Api.TxMetadata
                         Cardano.Api.Utils
                         Cardano.Api.Value
